[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Roman Kotelnikov <roman.kotelnikov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_exp = "1.0.1"
itertools = "0.10.0"
regex = "1.4.3"
tramp = "0.3.0"
